--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,11 +52,12 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.07" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/user_image"
             android:layout_width="@dimen/_80sdp"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_baseline_account_circle_24"
+            android:src="@drawable/ic_launcher_background"
+            app:riv_corner_radius="@dimen/_40sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/guideline_inner_seven_vertical"
             app:layout_constraintTop_toTopOf="parent" />
@@ -115,7 +116,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview"
+            android:id="@+id/recyclerview_home"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="parent"
