--- a/app/src/main/res/layout/recyclerview_row.xml
+++ b/app/src/main/res/layout/recyclerview_row.xml
@@ -10,45 +10,45 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/recycle_cardview"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
-        tools:ignore="MissingConstraints"
-        android:elevation="@dimen/_20sdp">
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/_20sdp"
+        tools:ignore="MissingConstraints">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:id="@+id/row"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/announce_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@android:drawable/sym_def_app_icon" />
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/announce_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
                 android:text="Title"
-                app:layout_constraintStart_toEndOf="@+id/announce_image"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/announce_description"
-                android:layout_marginLeft="@dimen/_5sdp"
-                android:textStyle="bold"
-                android:textSize="@dimen/_15sdp"/>
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/announce_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Description"
-                app:layout_constraintStart_toStartOf="@id/announce_title"
-                app:layout_constraintTop_toBottomOf="@+id/announce_title"
-                app:layout_constraintBottom_toBottomOf="@+id/row" />
+                android:text="Description" />
+
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description" />
+
+            <TextView
+                android:id="@+id/tv_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
