--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,20 +64,20 @@
             android:textSize="@dimen/_15sdp"
             android:textStyle="bold"
 
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-                 <ImageButton
+        <ImageButton
             android:id="@+id/logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorPrimary"
             android:src="@drawable/ic_logout"
-            app:layout_constraintTop_toTopOf="@+id/user_profile"
             app:layout_constraintBottom_toBottomOf="@+id/user_profile"
             app:layout_constraintEnd_toEndOf="@+id/user_profile"
-            android:backgroundTint="@color/colorPrimary"
-            />
+            app:layout_constraintTop_toTopOf="@+id/user_profile" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -93,22 +93,21 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toEndOf="@+id/guideline_seven_vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline_ninetythree_vertical"
-        app:layout_constraintTop_toBottomOf="@+id/guideline_fifty_horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toEndOf="@+id/guideline_seven_vertical"
+        app:layout_constraintTop_toBottomOf="@+id/guideline_fifty_horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_home"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
